sumo/tests/netgen/errors/testsuite.netgen
# Tests what happens if the output can not be written
false_output

# Tests what happens if no output is given
no_output

# Tests what happens if an unknown option is given
unknown_option

# Test for not buildable plain output
false_plain_output



# Test what happens if one tries to build grid and spider net
grid_and_spider

# Test what happens if one tries to build grid and random net
grid_and_random

# Test what happens if one tries to build spider and random net
spider_and_random

# Test what happens if one tries to build all three network types
grid_spider_and_random



# Errors within definition of a grid network
grid_errors

